test/associative/deitz/arrays/test_indefinite_remove.good
test_indefinite_remove.chpl:7 error: attempt to modify and iterate over domain simultaneously
